--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Aras Gungore
+% Author : Varun Madabushi
 % License : MIT
 %------------------------
 
@@ -132,19 +132,13 @@
 %---------- HEADING ----------
 
 \begin{center}
-    \textbf{\Huge \scshape Aras Güngöre} \\ \vspace{3pt}
+    \textbf{\Huge \scshape Resume - Varun Madabushi} \\ \vspace{3pt}
     \small
-    \faMobile \hspace{.5pt} \href{tel:905314204536}{+90 531 420 4536}
+    \faMobile \hspace{.5pt} \href{tel:8139651255}{(813) 965 1255}
     $|$
-    \faAt \hspace{.5pt} \href{mailto:arasgungore09@gmail.com}{arasgungore09@gmail.com}
+    \faAt \hspace{.5pt} \href{mailto:v.madabushi917@gmail.com}{v.madabushi917@gmail.com}
     $|$
-    \faLinkedinSquare \hspace{.5pt} \href{https://www.linkedin.com/in/arasgungore}{LinkedIn}
-    $|$
-    \faGithub \hspace{.5pt} \href{https://github.com/arasgungore}{GitHub}
-    $|$
-    \faGlobe \hspace{.5pt} \href{https://arasgungore.github.io}{Portfolio}
-    $|$
-    \faMapMarker \hspace{.5pt} \href{https://www.google.com/maps/place/Bogazici+University+North+Campus/@41.0863067,29.0441352,15z/data=!4m5!3m4!1s0x0:0x9d2497b07c8edb2f!8m2!3d41.0863067!4d29.0441352}{Istanbul, Turkey}
+    \faMapMarker \hspace{.5pt} {Columbia, MD, USA}
 \end{center}
 
 
@@ -156,23 +150,21 @@
   \resumeSubHeadingListStart
     
     \resumeEducationHeading
-      {Boğaziçi University
+      {Georgia Institute of Technology
       % \normalfont{(Admission rate: 0.09\%)}
-      }{Istanbul, Turkey}
-      {B.Sc. in Electrical and Electronics Engineering;   \textbf{GPA: 3.62/4.00}}{Sep 2018 \textbf{--} Jul 2023}
-      {Minor Degree in Computer Engineering;
-      \textbf{GPA: 3.58/4.00}}{Oct 2020 \textbf{--} Jul 2023}
-        % \resumeItemListStart
-            % \resumeItem{\textbf{Relevant coursework:} Calculus I-II, Matrix Theory, Differential Equations, Materials Science, Electrical Circuits I-II, Digital System Design, Numerical Methods, Probability Theory, Electronics I-II, Signals and Systems, Electromagnetic Field Theory, Energy Conversion, System Dynamics and Control, Communication Engineering}
-        % \resumeItemListEnd
-    
-    \resumeSubheading
-      {Kocaeli Science High School
-      % \normalfont{(Admission rate: 0.85\%)}
-      }{Kocaeli, Turkey}
-      {High School Diploma;   \textbf{GPA: 97.03/100}}{Sep 2014 \textbf{--} Jun 2018}
-    
+      }{Atlanta, GA}
+      {B.S. in Electrical Engineering, Minor in Robotics;   \textbf{GPA: 3.93/4.00}}{Aug 2017 \textbf{--} Dec 2020}
+      {M.S. in Electrical and Computer Engineering;  
+      \textbf{GPA: 4.00/4.00}}{Jan 2021 \textbf{--} May 2022}
   \resumeSubHeadingListEnd
+  \resumeSubHeadingListStart
+    \small{\item{
+  \textbf{Relevant coursework: }{Linear Control, Nonlinear Systems, Adaptive
+  Control, Dynamics and Control of Electric Machines, Robotics, Machine Learning, Analog Electronics} \\
+  \vspace{3pt}
+        
+    }}
+\resumeSubHeadingListEnd
 
 
 
@@ -183,39 +175,34 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Scale AI}{San Francisco, California, United States (Remote)}
-      {Prompt Engineer}{Jul 2023 \textbf{--} Present}
+      {Johns Hopkins University Applied Physics Laboratory}{Laurel, MD}
+      {Robotics Engineer}{Jun 2022 \textbf{--} Present}
         \resumeItemListStart
-            \resumeItem{Developed effective Turkish prompts for diverse AI tasks and maintained a high standard of prompt quality and consistency across different competencies, adhering to established guidelines and best practices.}
-            \resumeItem{Reviewed, validated, and scored the AI assistant's responses to ensure they align with intended AI assistant behaviors and the AI assistant produces accurate and contextually appropriate responses to given prompts.}
-            \resumeItem{Engaged in collaborative meetings with cross-functional teams and project coordinators, actively seeking guidance, addressing queries, and collectively brainstorming strategies to generate higher quality prompts.}
+      \resumeItem{Developed co-design algorithm using bayesian optimization to select designs and control
+      policies for hexapod robot}
+      \resumeItem{Developed fixed-wing aircraft and propeller models in C++ for use in
+      Nonlinear Model Predictive Controller}
+      \resumeItem{Implemented scripted task behaviors and "glue logic" for demonstrations
+      of underwater robot manipulator}
+      \resumeItem{Designed 2-axis sensor positioning mechanism for littoral zone
+      exploration robot}
+      \resumeItem{Developed power and control electronics for thermal cautery heater used in
+      experimental emergency medical device}
+      \resumeItem{Mentored high school interns on mechanical and software design
+      of robotic manipulator}
         \resumeItemListEnd
     
     \resumeSubheading
-      {SESTEK Speech Enabled Software Technologies}{Istanbul, Turkey}
-      {AI Research and Development Intern}{Jan 2022 \textbf{--} Feb 2022}
+      {Lawrence Livermore National Laboratory}{Livermore, CA}
+      {Defense Technologies Engineering Intern}{May 2020 \textbf{--} Aug 2020,
+      Sep 2021 \textbf{--} Apr 2022}
         \resumeItemListStart
-            \resumeItem{Implemented common NLP tasks using transformers such as named-entity recognition (NER), part-of-speech (POS) tagging, sentiment analysis, text classification, and extractive/generative question answering.}
-            \resumeItem{Built a generative question answering system via Dense Passage Retrieval (DPR) and Retrieval-Augmented Generation (RAG) using the Haystack framework with Python.}
-            \resumeItem{Worked on a custom Turkish open-domain question answering system by fine-tuning a BERT base model transformer. Evaluated the exact match and F1 scores using different Turkish data sets and compared the evaluation results.}
-        \resumeItemListEnd
-    
-    % \resumeSubheading
-      % {Ankara Metropolitan Municipality}{Ankara, Turkey}
-      % {SCADA Engineering Intern}{Aug 2021 \textbf{--} Sep 2021}
-        % \resumeItemListStart
-            % \resumeItem{Designed GSM/GPRS-based electrical control panels that are connected to local water pump automation systems. Pump station panels use digital output data received from the SCADA control center via RF transmission to control valves and pumps. Tank station panels are charged from the PV system and refill water tanks by signaling the pump station panel when the float switch is activated.}
-            % \resumeItem{Implemented motor control circuits by reading their PLC ladder diagrams and analyzed the EPLAN project documentation, HMI, and hardware components of an RTU panel.}
-        % \resumeItemListEnd
-
-    % \vspace{15pt}
-    \resumeSubheading
-      {Meteksan Defense Industry Inc.}{Ankara, Turkey}
-      {Analog Design Engineering Intern}{Jul 2021 \textbf{--} Aug 2021}
-        \resumeItemListStart
-            \resumeItem{Designed numerous analog circuits such as voltage-mode controlled buck converter, phase-shifted full-bridge isolated DC-DC converter, and EMI filters with LTspice. Integrated these circuits and implemented a 320 W power distribution unit to be used in a radar system's power circuit board.}
-            \resumeItem{Researched real-world compatible electronic components to be used in such circuits including GaNFETs, high-side gate drivers, and Schottky diodes.}
-            \resumeItem{Assembled PCBs of both common and differential mode filters and used VNA Bode 100 to measure the cut-off frequencies.}
+      \resumeItem{Designed simulator and hardware-in-the-loop testing framework
+      for Unmanned Surface Vehicle control system}
+      \resumeItem{Developed actuator and hydrodynamic drag models fit from experimental
+       data}
+      \resumeItem{Led development of data collection system integrating cameras,
+      hydrophones, and FPGA on custom PCB}
         \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -229,100 +216,55 @@
   \resumeSubHeadingListStart
   
     \resumeSubheading
-      {Max Planck Institute for Intelligent Systems}{Stuttgart, Baden\textbf{-}Württemberg, Germany}
-      {Undergraduate Researcher}{Jun 2022 \textbf{--} Aug 2022}
+      {Intelligent Vision and Automation Lab}{Georgia Tech}
+      {Graduate Researcher}{Jan 2022 \textbf{--} Aug 2022}
         \resumeItemListStart
-            \resumeItem{Worked in the Physical Intelligence Department with Ph.D. students Sinan Özgün Demir and Alp Can Karacakol on a project about 3D printing and heat-assisted magnetic programming of soft machines.}
-            \resumeItem{Updated a ROS package for converting 3D motion controller events to ROS messages so that it synchronously operates at any given loop rate.}
-            \resumeItem{Implemented an Arduino Mega driver for controlling a fluid dispenser, a laser, thermocouples, and a coil set. Updated ROS nodes for parsing G-codes and controlling stage movement and built the ROS-Arduino communication network to simulate a 3D printing and magnetic programming process.}
+          \resumeItem{Combined model predictive and reinforcement learning-based aircraft controllers to improve generalization to various aircraft types}
+        \resumeItem{Developed trajectory library utilizing convex
+          optimization to generate composite bezier spline paths}
         \resumeItemListEnd
     
     % \vspace{14pt}
     
     \resumeSubheading
-      {Nanonetworking Research Group, Boğaziçi University}{Istanbul, Turkey}
-      {Undergraduate Researcher}{Oct 2021 \textbf{--} Jun 2022, Part-time}
+      {Dynamic Adaptive Robot Technologies Lab}{Georgia Tech}
+      {Undergraduate Researcher}{Aug 2019 \textbf{--} Dec 2020}
         \resumeItemListStart
-            \resumeItem{Worked with Prof. Dr. Ali Emre Pusane on the project “Design and Implementation of Molecular Communication Systems Using Index Modulation” under the TÜBİTAK 2247-C Intern Researcher Scholarship Program (STAR).}
-            \resumeItem{Simulated the Brownian motion of molecules in a SISO MCvD system and predicted simulation parameters such as receiver radius, diffusion coefficient, and transmitter-receiver distance using CNNs with Python.}
-            \resumeItem{Plotted the arrival of molecules per symbol duration in a SISO MCvD system using Binomial, Poisson, and Gaussian model approximations with MATLAB.}
-            \resumeItem{Ran Monte Carlo simulations of the Gaussian model to encode/decode randomized binary sequences in a SISO MCvD system using BCSK modulation technique and calculated the bit error rate (BER) on Z-channel.}
+            \resumeItem{Designed components of hexapod robot with swappable locomotion mechanism for efficient multi-terrain traversal}
+            \resumeItem{Developed servo PCB, communication interface, and feedback control software for leg actuator and control system}
+      \resumeItem{Published "Increasing Mobile Robot Efficiency and Versatility
+      Through Manipulation-Driven Adaptation" in ASME Journal of Mechanisms and
+      Robotics (Oct 2021)}
         \resumeItemListEnd
-    
+
+    \resumeSubheading
+      {Electrical Engineering Capstone}{Georgia Tech}
+      {Undergraduate Capstone Project}{Aug 2020 \textbf{--} Dec 2020}
+        \resumeItemListStart
+        \resumeItem{Designed tactile sensor module to measure pressures across 16 points on a 40mm x 40mm area }
+        \resumeItem{Created models of piezoresistive effect in velostat material
+        to improve accuracy of sensor measurements}
+        \resumeItem{Developed C++ and PyQT code to read data and manage sensors
+        with user interface}
+        \resumeItemListEnd
   \resumeSubHeadingListEnd
 
-
-
-%----------- AWARDS & ACHIEVEMENTS -----------
-
-\section{Awards \& Achievements}
-  \vspace{2pt}
-  \resumeSubHeadingListStart
-    \small{\item{
-        \textbf{High Honors Degree:}{ Awarded to Bachelor alumni who have graduated with a GPA greater than or equal to 3.50 by Boğaziçi University.} \\ \vspace{3pt}
+% \section{Personal Projects}
+%   \vspace{3pt}
+%   \resumeSubHeadingListStart
+%     \resumeSubheading
+%       {Combat Robots/"BattleBots"}{June 2021 \textbf{--} Present}
+%       {}{}
+%         \resumeItemListStart
+%           \resumeItem{Designed and built 12lb and 3lb combat robots using horizontal spinning
+%           weapons and novel control algorithm}
+%     \resumeItem{Designed and tested custom printed circuit boards to house
+%     sensors, communications, power management, and microcontroller in small package}
+%     \resumeItem{Participated in multiple competitions and analyzed battle damage
+%     for potential improvements}
+%         \resumeItemListEnd
+%   \resumeSubHeadingListEnd
     
-        \textbf{National University Admission Exam (YKS):}{ Ranked $75^{th}$ in Mathematics and Science among ca. 2.3 million candidates with a test score of 489.92/500.} \\ \vspace{3pt}
-        
-        \textbf{KYK Outstanding Success Scholarship:}{ Awarded to undergraduate students who have been ranked in the top 100 on National University Admission Exam by Higher Education Credit and Hostels Institution (KYK).} \\ \vspace{3pt}
-        
-        \textbf{Boğaziçi University Success Scholarship:}{ Awarded to undergraduate students who have been ranked in the top 100 on National University Admission Exam by Boğaziçi University.} \\ \vspace{3pt}
-        
-        \textbf{TÜBİTAK 2247-C Intern Researcher Scholarship:}{ Awarded to undergraduate students who take part in research projects carried out by the Scientific and Technological Research Council of Turkey (TÜBİTAK).} \\ \vspace{3pt}
-        
-        \textbf{Duolingo English Test (DET):}{ Overall Score: 135/160} \\ \vspace{3pt}
-        
-        % \textbf{Boğaziçi University English Proficiency Test (BUEPT):}{ Achieved the highest grade A on the BUEPT grading scheme with a total score in the range of 85-100.} \\ \vspace{3pt}
-        
-        \textbf{Kocaeli Science High School Salutatorian Award:}{ Graduated as the second-highest ranked student in my class.}
-    }}
-  \resumeSubHeadingListEnd
-
-
-
-%----------- PROJECTS -----------
-
-\section{Projects}
-    \vspace{3pt}
-    \resumeSubHeadingListStart
-      
-      \resumeProjectHeading
-        {\textbf{Filters and Fractals} $|$ \emph{\href{https://github.com/arasgungore/filters-and-fractals}{\color{blue}GitHub}}}{}
-          \resumeItemListStart
-            \resumeItem{A C project which implements a variety of image processing operations that manipulate the size, filter, brightness, contrast, saturation, and other properties of PPM images from scratch.}
-            \resumeItem{Added recursive fractal generation functions to model popular fractals including Mandelbrot set, Julia set, Koch curve, Barnsley fern, and Sierpinski triangle in PPM format.}
-          \resumeItemListEnd
-      
-      \resumeProjectHeading
-        {\textbf{Chess Bot} $|$ \emph{\href{https://github.com/arasgungore/chess-bot}{\color{blue}GitHub}}}{}
-          \resumeItemListStart
-            \resumeItem{A C++ project in which you can play chess against an AI with a specified decision tree depth that uses alpha-beta pruning algorithm to predict the optimal move.}
-            \resumeItem{Aside from basic moves, this mini chess engine also implements chess rules such as castling, en passant, fifty-move rule, threefold repetition, and pawn promotion.}
-          \resumeItemListEnd
-      
-      % \resumeProjectHeading
-        % {\textbf{Rocket Flight Simulator} $|$ \emph{\href{https://github.com/arasgungore/rocket-flight-simulator}{\color{blue}GitHub}}}{}
-          % \resumeItemListStart
-            % \resumeItem{A Simulink project which can accurately simulate the motion of a flying rocket in one-dimensional space.}
-            % \resumeItem{The project implements the forces acting on a rocket which are drag, weight, and thrust as subsystems that take time-variant parameters into consideration such as distance from the center of Earth, mass and velocity of the rocket, and air density at different layers of Earth's atmosphere.}
-          % \resumeItemListEnd
-      
-      % \resumeProjectHeading
-        % {\textbf{Netlist Solver} $|$ \emph{\href{https://github.com/arasgungore/netlist-solver}{\color{blue}GitHub}}}{}
-          % \resumeItemListStart
-            % \resumeItem{A MATLAB project that uses modified nodal analysis (MNA) algorithm to calculate the node voltages of any analog circuit without dependent sources given in netlist format.}
-            % \resumeItem{Added a module that sweeps the resistance of a load resistor, plots power dissipation as a function of load resistance, and finds the resistance value corresponding to maximum power.}
-          % \resumeItemListEnd
-      
-      \resumeProjectHeading
-        {\textbf{CMPE 250 Projects} $|$ \emph{\href{https://github.com/arasgungore/CMPE250-projects}{\color{blue}GitHub}}}{}
-          \resumeItemListStart
-            \resumeItem{Five Java projects assigned for the Data Structures and Algorithms (CMPE 250) course in the Fall 2021-22 semester.}
-            \resumeItem{These projects apply DS\&A concepts such as discrete-event simulation (DES) using priority queues, Dijkstra's shortest path algorithm, Prim's algorithm to find the minimum spanning tree (MST), Dinic's algorithm for maximum flow problems, and weighted job scheduling with dynamic programming to real-world problems.}
-          \resumeItemListEnd
-      
-    \resumeSubHeadingListEnd
-
-
 
 %----------- SKILLS -----------
 
@@ -330,11 +272,11 @@
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Programming:}{ C, C++, Java, Python, JavaScript, MATLAB, R, SQL, MySQL, VHDL} \\ \vspace{3pt}
+        \textbf{Programming:}{ C++, Python, MATLAB, VHDL} \\ \vspace{3pt}
         
-        \textbf{Technologies:}{ Git, Docker, OpenCV, ROS, Arduino, Simulink, LTspice, Xilinx ISE} \\ \vspace{3pt}
+        \textbf{Technologies:}{ Solidworks, OnShape, Inventor, Altium, Eagle, KiCAD, ROS, STM32, Arduino, Simulink, LTspice} \\ \vspace{3pt}
         
-        \textbf{Languages:}{ Turkish (Native), English (Professional), German (Elementary)}
+        \textbf{Tools:}{ Soldering (SMD and THT), Mill, Lathe, 3D Printer, Oscilloscope, Logic Analyzer}
         
         % \textbf{Frameworks}{: X, X, X} \\
         % \textbf{Developer Tools}{: X, X, X} \\
@@ -343,19 +285,59 @@
     }}
   \resumeSubHeadingListEnd
 
-
-
 %----------- RELEVANT COURSEWORK -----------
 
-\section{Relevant Coursework}
-  \vspace{2pt}
-  \resumeSubHeadingListStart
-    \small{\item{
-        \textbf{Major coursework:}{ Materials Science, Electrical Circuits I-II, Digital System Design, Numerical Methods, Probability Theory, Electronics I-II, Signals and Systems, Electromagnetic Field Theory, Energy Conversion, System Dynamics and Control, Communication Engineering, Pattern Recognition, Introduction to Digital Signal Processing, Introduction to Digital Communications, Introduction to Database Systems, Introduction to Image Processing, Machine Vision} \\ \vspace{3pt}
-        
-        \textbf{Minor coursework:}{ Discrete Computational Structures, Introduction to Object-Oriented Programming, Data Structures and Algorithms, Computer Organization, Fundamentals of Software Engineering}
-    }}
-  \resumeSubHeadingListEnd
+% \section{Relevant Coursework}
+%   \vspace{2pt}
+
+% %----------- PROJECTS -----------
+
+% \section{Projects}
+%     \vspace{3pt}
+%     \resumeSubHeadingListStart
+      
+%       \resumeProjectHeading
+%         {\textbf{Filters and Fractals} $|$ \emph{\href{https://github.com/arasgungore/filters-and-fractals}{\color{blue}GitHub}}}{}
+%           \resumeItemListStart
+%             \resumeItem{A C project which implements a variety of image processing operations that manipulate the size, filter, brightness, contrast, saturation, and other properties of PPM images from scratch.}
+%             \resumeItem{Added recursive fractal generation functions to model popular fractals including Mandelbrot set, Julia set, Koch curve, Barnsley fern, and Sierpinski triangle in PPM format.}
+%           \resumeItemListEnd
+      
+%       \resumeProjectHeading
+%         {\textbf{Chess Bot} $|$ \emph{\href{https://github.com/arasgungore/chess-bot}{\color{blue}GitHub}}}{}
+%           \resumeItemListStart
+%             \resumeItem{A C++ project in which you can play chess against an AI with a specified decision tree depth that uses alpha-beta pruning algorithm to predict the optimal move.}
+%             \resumeItem{Aside from basic moves, this mini chess engine also implements chess rules such as castling, en passant, fifty-move rule, threefold repetition, and pawn promotion.}
+%           \resumeItemListEnd
+      
+%       % \resumeProjectHeading
+%         % {\textbf{Rocket Flight Simulator} $|$ \emph{\href{https://github.com/arasgungore/rocket-flight-simulator}{\color{blue}GitHub}}}{}
+%           % \resumeItemListStart
+%             % \resumeItem{A Simulink project which can accurately simulate the motion of a flying rocket in one-dimensional space.}
+%             % \resumeItem{The project implements the forces acting on a rocket which are drag, weight, and thrust as subsystems that take time-variant parameters into consideration such as distance from the center of Earth, mass and velocity of the rocket, and air density at different layers of Earth's atmosphere.}
+%           % \resumeItemListEnd
+      
+%       % \resumeProjectHeading
+%         % {\textbf{Netlist Solver} $|$ \emph{\href{https://github.com/arasgungore/netlist-solver}{\color{blue}GitHub}}}{}
+%           % \resumeItemListStart
+%             % \resumeItem{A MATLAB project that uses modified nodal analysis (MNA) algorithm to calculate the node voltages of any analog circuit without dependent sources given in netlist format.}
+%             % \resumeItem{Added a module that sweeps the resistance of a load resistor, plots power dissipation as a function of load resistance, and finds the resistance value corresponding to maximum power.}
+%           % \resumeItemListEnd
+      
+%       \resumeProjectHeading
+%         {\textbf{CMPE 250 Projects} $|$ \emph{\href{https://github.com/arasgungore/CMPE250-projects}{\color{blue}GitHub}}}{}
+%           \resumeItemListStart
+%             \resumeItem{Five Java projects assigned for the Data Structures and Algorithms (CMPE 250) course in the Fall 2021-22 semester.}
+%             \resumeItem{These projects apply DS\&A concepts such as discrete-event simulation (DES) using priority queues, Dijkstra's shortest path algorithm, Prim's algorithm to find the minimum spanning tree (MST), Dinic's algorithm for maximum flow problems, and weighted job scheduling with dynamic programming to real-world problems.}
+%           \resumeItemListEnd
+      
+%     \resumeSubHeadingListEnd
+
+
+
+
+
+
 
 
 
