--- a/main.tex
+++ b/main.tex
@@ -144,7 +144,7 @@ style=ieee,
     % Varun Madabushi
     $|$
     \faAt \hspace{.5pt}
-    \href{mailto:v.madabushi917@gmail.com}{v.madabushi917@gmail.com}
+    \href{mailto:vmadabushi3@gatech.edu}{vmadabushi3@gatech.edu}
     $|$
     \faMapMarker \hspace{.5pt} {Atlanta, GA, USA}
 \end{center}
@@ -159,9 +159,9 @@ style=ieee,
     
     \resumeEducationHeading
       {Georgia Institute of Technology}{Atlanta, GA}
-      {B.S. in Electrical Engineering, Minor in Robotics;   \textbf{GPA: 3.93/4.00}}{Aug 2017 \textbf{--} Dec 2020}
-      {M.S. in Electrical and Computer Engineering;         \textbf{GPA: 4.00/4.00}}{Jan 2021 \textbf{--} May 2022}
-      {PhD. in Robotics;                                    \textbf{GPA: 4.00/4.00}}{Aug 2024 \textbf{--} May 2028 (Expected)}
+      {B.S. in Electrical Engineering, Minor in Robotics   }{Aug 2017 \textbf{--} Dec 2020}
+      {M.S. in Electrical and Computer Engineering         }{Jan 2021 \textbf{--} May 2022}
+      {PhD. in Robotics (Advisor: Dr. Maegan Tucker)       }{Aug 2024 \textbf{--} May 2028 (Expected)}
   \resumeSubHeadingListEnd
 
 
@@ -177,15 +177,16 @@ style=ieee,
       {Graduate Researcher}{Aug 2024 \textbf{--} Present}
       \resumeItemListStart
         \resumeItem{Developed bipedal robot control system utilizing offline trajectory optimization and reinforcement learning to generate stepping behaviors that are 
-        natural-looking, easily tunable, and train faster than comparable approaches}
-        \resumeItem{Researching integration of reachability analysis tools into trajectory optimization pipeline to produce inherently robust and safe controllers for bipedal robots}
+        natural-looking, easily tunable, and train faster than comparable approaches (Submitted to ICRA 2026; in review)}
+        \resumeItem{Researching integration of reachability analysis tools into trajectory optimization pipeline to produce controllers for bipedal robots which are 
+        provably robust to terrain variation and external disturbances}
       \resumeItemListEnd
     \resumeSubheading
       {Johns Hopkins University Applied Physics Laboratory}{Laurel, MD}
       {Robotics Engineer}{Jun 2022 \textbf{--} Jul 2024}
         \resumeItemListStart
       \resumeItem{Led statistical verification and operational analysis, and assisted in development of Nonlinear Model Predictive Control (NMPC) algorithm for
-      multi-agent fixed-wing Unmanned Aerial Vehicle systems}
+      multi-agent fixed-wing Unmanned Aerial Vehicle (UAV) systems}
       \resumeItem{Provided hardware and software support for numerous outdoor flight tests of NMPC-based UAV landing controller}
       \resumeItem{Implemented trajectory optimization to realize manipulation behaviors such grasping and valve turning on
       unmanned underwater mobile manipulator (awarded top prize in internal R\&D across all of the company)}
@@ -216,20 +217,27 @@ style=ieee,
       \resumeItem{Designed simulator and hardware-in-the-loop testing
       for Unmanned Surface Vehicle (USV) control system}
       \resumeItem{Developed actuator and hydrodynamic drag models fit from experimental
-       data, used to inform new USV design}
+      data, used to inform new USV design}
       \resumeItem{Led development of data collection system integrating cameras,
       hydrophones, and FPGA on custom PCB}
         \resumeItemListEnd
     
   \resumeSubHeadingListEnd
+
+% %----------- Publications -----------
+\section{Publications}
+  \vspace{3pt}
+  \nocite{*}
+  \printbibliography[heading=none]
+
 % %----------- SKILLS -----------
 
 \section{Skills}
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Concepts: }{Nonlinear Systems, Optimal Control, System Identification, Reinforcement Learning, Sim-to-Real Transfer} \\ \vspace{3pt}
-        \textbf{Programming: }{C++, Python, MATLAB, CUDA, ROS, Docker, STM32, Arduino } \\ \vspace{3pt}
+        \textbf{Concepts: }{Nonlinear Systems, Optimal Control, System Identification, Reinforcement Learning, Parallel Programming} \\ \vspace{3pt}
+        \textbf{Programming: }{C++, Python, MATLAB, CUDA, ROS, Docker, STM32, Arduino, Git } \\ \vspace{3pt}
         
         \textbf{Software: }{MuJoCo, Solidworks, OnShape, Altium, KiCAD} \\ \vspace{3pt}
         
@@ -241,13 +249,6 @@ style=ieee,
         % \textbf{Applications}{: X, X, X}
     }}
   \resumeSubHeadingListEnd
-
-
-\section{Publications}
-  \vspace{3pt}
-  \nocite{*}
-  \printbibliography[heading=none]
-
 
 %----------- RESEARCH EXPERIENCE -----------
 
