Added JAX, PyTorch

--- a/main.tex
+++ b/main.tex
@@ -237,9 +237,9 @@ style=ieee,
   \resumeSubHeadingListStart
     \small{\item{
         \textbf{Concepts: }{Nonlinear Systems, Optimal Control, System Identification, Reinforcement Learning, Parallel Programming} \\ \vspace{3pt}
-        \textbf{Programming: }{C++, Python, MATLAB, CUDA, ROS, Docker, STM32, Arduino, Git } \\ \vspace{3pt}
+        \textbf{Programming: }{C++, Python, JAX, PyTorch, MATLAB, CUDA} \\ \vspace{3pt}
         
-        \textbf{Software: }{MuJoCo, Solidworks, OnShape, Altium, KiCAD} \\ \vspace{3pt}
+        \textbf{Software: }{MuJoCo, ROS, Docker, STM32, Arduino, Git, Solidworks, OnShape, Altium, KiCAD} \\ \vspace{3pt}
         
         \textbf{Tools: }{Soldering (SMD and THT), Mill, Lathe, 3D Printer, Oscilloscope, Logic Analyzer}
         
