--- a/main.tex
+++ b/main.tex
@@ -237,7 +237,7 @@ style=ieee,
   \resumeSubHeadingListStart
     \small{\item{
         \textbf{Concepts: }{Nonlinear Systems, Optimal Control, System Identification, Reinforcement Learning, Parallel Programming} \\ \vspace{3pt}
-        \textbf{Programming: }{C++, Python, JAX, PyTorch, MATLAB, CUDA} \\ \vspace{3pt}
+        \textbf{Programming: }{C++, Python, JAX, PyTorch, CUDA, MPI, MATLAB} \\ \vspace{3pt}
         
         \textbf{Software: }{MuJoCo, ROS, Docker, STM32, Arduino, Git, Solidworks, OnShape, Altium, KiCAD} \\ \vspace{3pt}
         
